<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>net.brunomendola.querity</groupId>
  <artifactId>querity-parent</artifactId>
  <version>2.2.2-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>querity</name>
  <description>Generic interface to query a database.</description>

  <inceptionYear>2021</inceptionYear>
  <url>https://github.com/brunomendola/querity</url>

  <developers>
    <developer>
      <name>Bruno Mendola</name>
      <url>http://www.brunomendola.net</url>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://github.com/brunomendola/querity/blob/main/LICENSE</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/brunomendola/querity/issues</url>
  </issueManagement>

  <scm>
    <url>https://github.com/brunomendola/querity</url>
    <connection>scm:git:https://github.com/brunomendola/querity.git</connection>
    <developerConnection>scm:git:https://github.com/brunomendola/querity.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/brunomendola/querity/actions</url>
  </ciManagement>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <spring-boot.version>3.4.3</spring-boot.version>
    <lombok.version>1.18.36</lombok.version>
    <commons-lang3.version>3.17.0</commons-lang3.version>
    <reflections.version>0.10.2</reflections.version>

    <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>3.5.2</maven-failsafe-plugin.version>
    <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
    <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
    <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
    <maven-gpg-plugin.version>3.2.7</maven-gpg-plugin.version>
    <maven-release-plugin.version>3.1.1</maven-release-plugin.version>

    <sonar.projectName>Querity</sonar.projectName>
    <sonar.organization>brunomendola</sonar.organization>
    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
    <sonar.exclusions>querity-test/**</sonar.exclusions>
  </properties>

  <modules>
    <module>querity-api</module>
    <module>querity-spring-data-jpa</module>
    <module>querity-spring-data-elasticsearch</module>
    <module>querity-spring-data-mongodb</module>
    <module>querity-test</module>
    <module>querity-spring-web</module>
    <module>querity-common</module>
    <module>querity-parser</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>net.brunomendola.querity</groupId>
        <artifactId>querity-api</artifactId>
        <version>2.2.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>net.brunomendola.querity</groupId>
        <artifactId>querity-common</artifactId>
        <version>2.2.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>net.brunomendola.querity</groupId>
        <artifactId>querity-parser</artifactId>
        <version>2.2.2-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>net.brunomendola.querity</groupId>
        <artifactId>querity-test</artifactId>
        <version>2.2.2-SNAPSHOT</version>
      </dependency>

      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.reflections</groupId>
        <artifactId>reflections</artifactId>
        <version>${reflections.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <encoding>${project.build.sourceEncoding}</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
        <version>${jacoco-maven-plugin.version}</version>
        <executions>
          <execution>
            <id>prepare-agent</id>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
          </execution>
          <execution>
            <id>report</id>
            <phase>prepare-package</phase>
            <goals>
              <goal>report</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>${maven-source-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>${maven-release-plugin.version}</version>
        <configuration>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <resume>false</resume>
          <autoVersionSubmodules>true</autoVersionSubmodules>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>deploy-ossrh</id>
      <distributionManagement>
        <snapshotRepository>
          <id>ossrh</id>
          <name>Central Repository OSSRH - Snapshots</name>
          <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
          <id>ossrh</id>
          <name>Central Repository OSSRH - Releases</name>
          <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
      </distributionManagement>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>${maven-gpg-plugin.version}</version>
            <configuration>
              <gpgArguments>
                <arg>--pinentry-mode</arg>
                <arg>loopback</arg>
              </gpgArguments>
            </configuration>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>deploy-github</id>
      <distributionManagement>
        <repository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/brunomendola/querity</url>
        </repository>
      </distributionManagement>
    </profile>
  </profiles>
</project>
